# literate-octo-tribble

./: .gitignore  README.md
Autogen/: requirements.txt
Autogen/notebooks/: report.md  stock_analysis.ipynb
Autogen/notebooks/AutogenStudio/: workflow_Stock_Workflow_with_tools.json
Autogen/notebooks/blogs/: tmp_code_5540c011b798a4af34eb2abce96eb847.py  tmp_code_9533047017452af3313e9dc3cf202eb3.py
CrewAI/: pyproject.toml  requirements.txt
CrewAI/config/: job_interview_agents.yml  job_interview_tasks.yml  job_search_agents.yml  job_search_tasks.yml
CrewAI/notebooks/: basics.ipynb  crewai_flow.html  training_data.pkl
LangChain/: requirements.txt
LangChain/notebooks/: langgraph.ipynb  the_basics.ipynb
LangChain/notebooks/langgraph_studio/: agents.py  docker-compose.yml  langgraph.json  requirements.txt
LlamaIndex/: compiled.json  requirements.txt
LlamaIndex/App/: .env.docker  .template.env.openai  Dockerfile  README.MD  logging.ini
LlamaIndex/App/_app/: pyproject.toml
LlamaIndex/App/backend/: .env.docker  Dockerfile
LlamaIndex/App/backend/_app/: pyproject.toml  requirements.txt
LlamaIndex/App/backend/_app/multi_workflows_app/deployment/: deploy_workflow.py
LlamaIndex/App/backend/_app/self_discovery_app/deployment/: core.py  deploy_workflow.py
LlamaIndex/App/backend/_app/self_discovery_app/workflows/: selfdiscovery.py
LlamaIndex/App/backend/kafka/docker/: .env.kafka  docker-compose.yml
LlamaIndex/App/frontend/: app.py  requirements.txt
LlamaIndex/App/kafka/docker/: docker-compose.yml
LlamaIndex/autogen_code_dir/: tmp_code_1e573d15c3cc2dcbb0ee955e4505fefd.py
LlamaIndex/notebooks/: 2. workflow.ipynb  3. deployment.ipynb  AskLLM.html  AskLLM_2.html  SelfDiscover.html  StockAssistant.html  StockSME_flow_all.html  ingest.ipynb  kg.html  nebula.ipynb  neo4j.ipynb  single_agent.ipynb  the_basics.ipynb  workflow.ipynb
LlamaIndex/notebooks/storage/: docstore.json  index_store.json  property_graph_store.json
LlamaIndex/src/: workflow.py
haystack/: requirements.txt
haystack/notebooks/: ingestion_pipeline.yml  rag.yml  the_basics.ipynb
src/: fundamental_analyst.py  technical_analyst.py
