[tool.poetry]
name = "crewai recipes"
version = "0.1.0"
description = "Basic CrewAI recipes for multi-agent systems"
authors = ["Titus Lim <tituslhy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
crewai = "^0.95.0"
crewai-tools = "^0.32.1"
litellm = "^1.52.14"
chainlit = "^1.3.2"
openai = "^1.55.0"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
llama-index = "^0.12.11"
tavily-python = "^0.5.0"
llama-index-tools-tavily-research = "^0.3.0"
arize-phoenix-otel = "^0.6.1"
openinference-instrumentation-crewai = "^0.1.4"
openinference-instrumentation-litellm = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
