[tool.poetry]
name = "\"llama-workflows-app\""
version = "0.1.0"
description = ""
authors = ["Titus Lim <tituslhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arize-phoenix-otel = "0.6.1"
langchain = "0.3.7"
langchain-openai = "0.2.3"
langgraph = "0.2.45"
langgraph-checkpoint = "2.0.2"
langgraph-checkpoint-sqlite = "2.0.1"
llama-index = "0.11.16"
llama-index-core = "0.11.16"
llama-index-llms-openai = "0.2.11"
llama-index-vector-stores-qdrant = "0.3.0"
qdrant-client = "1.11.3"
pyautogen = "0.3.1"
autogen-agentchat = "0.2.37"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
llama-deploy = {version = "0.2.4", extras = ["kafka"]}
kafka-python-ng = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
