[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "self-discovery-app"
version = "0.1.0"
description = ""
authors = ["Titus Lim <tituslhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index-llms-openai = "^0.2.1"
llama-index-embeddings-openai = "^0.2.4"
llama-index-agent-openai = "^0.3.0"
llama-deploy = { version = "^0.2.0", extras = ["kafka"] }
